# Esp32Idf

./: .gitignore  CMakeLists.txt  README.md  build.sh  install.sh  sdkconfig.defaults
main/: CMakeLists.txt  app_registry.h  main.cpp  wifi_passwords_sample.h
main/app_registry/: http_server.cpp  mulit_thread_basic.cpp  wifi_basic.cpp
